src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0003.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram CD4AC0003 {
  class DAO;
  class Factory;
}